@@ -8,6 +8,11 @@ Thanks to Stefan Kost for contributing to this release.
 
 - Minor fix to BibTeX syntax highlighting (Stefan Kost).
 
++ API Additions:
+
+- Added Buffer.invalidateCachedFoldLevels() method needed by SideKick
+  plugin.
+
 * Version 4.1pre10
 
 Thanks to Kris Kopicki and Oliver Rutherfurd for contributing to this
